[gd_scene load_steps=19 format=2]

[ext_resource path="res://tile2.jpeg" type="Texture" id=1]
[ext_resource path="res://Test_Mul-Level/TestLevel.gd" type="Script" id=2]
[ext_resource path="res://assets/tilesheet.png" type="Texture" id=3]
[ext_resource path="res://assets/light.png" type="Texture" id=4]
[ext_resource path="res://assets/BoI_gates.webp" type="Texture" id=5]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/431118__inspectorj__door-front-closing-a.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/floor.png" type="Texture" id=8]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 64, 96, 0, 96, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 128, 64, 0, 64, 0, 0, 128, 0 )

[sub_resource type="TileSet" id=1]
0/name = "tile2.jpeg 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 32, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tilesheet.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 768, 896, 64, 96 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "BoI_gates.webp 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 384, 96, 64, 96 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 7 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "tile2.jpeg 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 96, 160, 96, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "BoI_gates.webp 4"
4/texture = ExtResource( 5 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 160, 0, 128, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 8 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0

[sub_resource type="TileSet" id=6]
0/name = "floor.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 96, 64, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 44, 48 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48, 28 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 34.25, 54.25 )

[sub_resource type="Animation" id=9]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("OverlayLayer/Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0705882, 0, 0.152941, 0 ), Color( 0.0705882, 0, 0.152941, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("OverlayLayer/Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0705882, 0, 0.152941, 1 ), Color( 0.0705882, 0, 0.152941, 0 ) ]
}

[node name="TestLevel1" type="CanvasLayer"]
script = ExtResource( 2 )
level_name = "level1"

[node name="GatesClosed+floor" type="TileMap" parent="."]
position = Vector2( -1, -648 )
tile_set = SubResource( 1 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 4, 0, 655366, 4, 0, 655367, 4, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 720896, 1, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720910, 1, 0, 786432, 1, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786445, 0, 0, 786446, 2, 0, 851968, 1, 0, 851969, 0, 0, 851972, 0, 0, 851978, 0, 0, 917504, 1, 0, 917505, 0, 0, 917506, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917516, 0, 0, 917518, 1, 0, 983040, 1, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983051, 0, 0, 983053, 0, 0, 983054, 1, 0, 1048576, 1, 0, 1048577, 0, 0, 1048578, 0, 0, 1048580, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048587, 0, 0, 1048589, 0, 0, 1048590, 1, 0, 1114116, 0, 0, 1114118, 0, 0, 1114121, 0, 0, 1114123, 0, 0, 1114125, 0, 0, 1114126, 1, 0, 1179648, 2, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179655, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179662, 1, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245197, 0, 0, 1245198, 1, 0, 1310720, 1, 0, 1310721, 1, 0, 1310722, 1, 0, 1310723, 1, 0, 1310724, 1, 0, 1310725, 1, 0, 1310726, 1, 0, 1310727, 1, 0, 1310728, 1, 0, 1310729, 1, 0, 1310730, 1, 0, 1310731, 1, 0, 1310732, 1, 0, 1310733, 1, 0, 1310734, 1, 0 )

[node name="GatesOpen" type="TileMap" parent="."]
visible = false
tile_set = SubResource( 6 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( 6, 0, 0, 7, 0, 0, 131086, 0, 0, 196622, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -816, 684 )
texture = ExtResource( 4 )
color = Color( 0.760784, 0.584314, 0.203922, 0.784314 )

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( 1435, 57 )
texture = ExtResource( 4 )
color = Color( 0.760784, 0.584314, 0.203922, 0.784314 )

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 840, 184 )

[node name="Gate_to_boss" type="Area2D" parent="."]
position = Vector2( 1, 1 )
collision_mask = 0

[node name="GateCollision1" type="CollisionShape2D" parent="Gate_to_boss"]
position = Vector2( 927, 183 )
shape = SubResource( 4 )
disabled = true

[node name="Gate_to_shop" type="Area2D" parent="."]
position = Vector2( 1, 1 )
collision_mask = 0

[node name="GateCollision2" type="CollisionShape2D" parent="Gate_to_shop"]
position = Vector2( 447, 35 )
shape = SubResource( 3 )
disabled = true

[node name="Gate_to_lootbox" type="Area2D" parent="."]
position = Vector2( 1, 1 )
collision_mask = 0

[node name="GateCollision3" type="CollisionShape2D" parent="Gate_to_lootbox"]
position = Vector2( 31.75, 534.25 )
shape = SubResource( 5 )
disabled = true

[node name="door_shuts" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 11, 8 )
stream = ExtResource( 7 )

[node name="LevelCompleted" type="CheckBox" parent="."]
margin_left = 420.0
margin_top = 292.0
margin_right = 444.0
margin_bottom = 324.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
anims/fade_in = SubResource( 9 )
anims/fade_out = SubResource( 10 )

[connection signal="body_entered" from="Gate_to_boss" to="." method="_on_Gate_to_boss_body_entered"]
[connection signal="body_entered" from="Gate_to_shop" to="." method="_on_Gate_to_shop_body_entered"]
[connection signal="body_entered" from="Gate_to_lootbox" to="." method="_on_Gate_to_lootbox_body_entered"]
[connection signal="pressed" from="LevelCompleted" to="." method="_on_LevelCompleted_pressed"]
